Fix crash when changing option

BUG: 468633
FIXED-IN: 5.2